# person_detection

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.old
components/display_manager/: CMakeLists.txt  display_manager.c  idf_component.yml
components/display_manager/include/: display_manager.h
main/: CMakeLists.txt  app_camera_esp.h  audio_provider.cc  detection_responder.cc  image_provider.cc  main.cc  main_functions.cc  main_functions.h  micro_model_settings.h  model.cc  model.h  model_settings.cc  model_settings.h  recognize_commands.cc  recognize_commands.h  ringbuf.c
